# 3dgameboilerplate

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_glb_loader.py
Scripts/: format.ps1  run_dev.ps1  run_headless.ps1  test.ps1
app/: bootstrap.py  main.py  settings.py
data/configs/: default_settings.json
data/saves/: quicksave.json
data/scenarios/: ember_trial.json  fire_lab.json  sandbox_small.json  village_attack.json
docs/: architecture.md  framework_api.md  roadmap.md  save_format.md  systems.md
engine/: asset_loader.py  camera.py  debug_overlay.py  events.py  game_app.py  input.py  scene.py  services.py
engine/scenes/: base_scene.py
game/adapters/: input_to_commands.py  sim_to_render.py
game/definitions/: agents.py  buildings.py  enemies.py  npcs.py  registry.py  resources.py  spells.py
game/gameplay/: commands.py  enemy_ai_system.py  enemy_behavior.py  objectives.py  player_controller_system.py  player_movement_system.py  progression.py  rules.py
game/scenes/: sandbox_scene.py  scenario_loader.py  scenario_models.py  simulation_scene.py
sim/: batch_runner.py  clock.py  commands.py  save_load.py  scheduler.py  state.py  system_installers.py  world.py
sim/analysis/: exporters.py  recorder.py
sim/components/: agent_tag.py  ai_state.py  combat_stats.py  cooldowns.py  enemy_tag.py  facing.py  faction.py  health.py  mana.py  move_intent.py  movement.py  player_tag.py  renderable.py  spellbook.py  (+3 more)
tests/: conftest.py  test_death_system.py  test_ecs_stability.py  test_replay.py  test_world.py
(+33 files in other folders)
